--- a/CURDPractice_CA.UI/Views/_ViewImports.cshtml
+++ b/CURDPractice_CA.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using ServiceContracts.DTO;
 @using ServiceContracts.Enums;
+@using CURDPractice_CA.Core.DTO;
+
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
