--- a/CURDPractice_CA.UI/Views/Account/Register.cshtml
+++ b/CURDPractice_CA.UI/Views/Account/Register.cshtml
@@ -45,7 +45,7 @@
 		@*PhoneNumber*@
 		<div class="form-field flex">
 			<div class="w-25">
-				<label asp-for="PhoneNumber" class="form-label pt">Person Name</label>
+				<label asp-for="PhoneNumber" class="form-label pt">Phone Number</label>
 			</div>
 			<div class="flex-1">
 				<input asp-for="PhoneNumber" class="form-input" />
@@ -56,7 +56,7 @@
 		@*PhoneNumber*@
 		<div class="form-field flex">
 			<div class="w-25">
-				<label asp-for="Password" class="form-label pt">Person Name</label>
+				<label asp-for="Password" class="form-label pt">Password</label>
 			</div>
 			<div class="flex-1">
 				<input asp-for="Password" class="form-input" />
@@ -67,7 +67,7 @@
 		@*PhoneNumber*@
 		<div class="form-field flex">
 			<div class="w-25">
-				<label asp-for="ConfirmPassword" class="form-label pt">Person Name</label>
+				<label asp-for="ConfirmPassword" class="form-label pt">Confirm Password</label>
 			</div>
 			<div class="flex-1">
 				<input asp-for="ConfirmPassword" class="form-input" />
