--- a/CURDPractice_CA.UI/Views/Persons/PersonsPdf.cshtml
+++ b/CURDPractice_CA.UI/Views/Persons/PersonsPdf.cshtml
@@ -2,6 +2,7 @@
 
 @{
 	Layout = null;
+	ViewBag.CurrentUrl = "~/Persons/PersonsPdf";
 }
 
 <link href="@("http://" + Context.Request.Host.ToString())/StyleSheet.css" rel="stylesheet"/>
