ReturnURL and how to use it

--- a/CURDPractice_CA.UI/Views/Account/Login.cshtml
+++ b/CURDPractice_CA.UI/Views/Account/Login.cshtml
@@ -19,7 +19,7 @@
 
 	Not yet registered ? <a asp-controller="Account" asp-action="Register" class="link-hover button-link button-blue-back">Register</a>
 
-	<form asp-controller="Account" asp-action="Login" method="post">
+	<form asp-controller="Account" asp-action="Login" asp-route-ReturnUrl="@Context.Request.Query["ReturnUrl"]" method="post">
 
 		@* Email *@
 		<div class="form-field flex">
