Working add roles

--- a/CURDPractice_CA.UI/Views/_ViewImports.cshtml
+++ b/CURDPractice_CA.UI/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using ServiceContracts.DTO;
 @using ServiceContracts.Enums;
+
 @using CURDPractice_CA.Core.DTO;
+@using CURDPractice_CA.Core.Enums
 
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
