--- a/CURDPractice_CA.UI/Views/Account/Register.cshtml
+++ b/CURDPractice_CA.UI/Views/Account/Register.cshtml
@@ -76,6 +76,20 @@
 			</div>
 		</div>
 
+		@*UserType*@
+		<div class="form-field flex">
+			<div class="w-25">
+				<label class="form-label">User Type</label>
+			</div>
+			<div class="flex-1">
+				<input type="radio" id="User" asp-for="UserType" value="User" checked/>
+				<label for="User">User</label>
+
+				<input type="radio" id="Admin" asp-for="UserType" value="Admin" />
+				<label for="Admin">Admin</label>
+			</div>
+		</div>
+
 		@*Submit*@
 		<div class="form-field flex">
 			<div class="w-25">
