--- a/CURDPractice_CA.UI/Views/Shared/_Layout.cshtml
+++ b/CURDPractice_CA.UI/Views/Shared/_Layout.cshtml
@@ -30,6 +30,14 @@
                                         <i class="fa-solid fa-user"></i>
                                         @User.Identity?.Name
                                     </li>
+
+                                    @if(User.IsInRole("Admin"))
+                                    {
+                                        <li>
+                                            <a asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a>
+                                        </li>
+                                    }
+                                    
                                     <li>
                                         <a asp-controller="Account" asp-action="Logout">Logout</a>
                                     </li>
